src/objects/OpportunityLineItem.object
<CustomObject>
    <fields>
        <fullName>Administratie__c</fullName>
        <label>Administratie</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADMIN1</fullName>
                </value>
                <value>
                    <fullName>ADMIN2</fullName>
                </value>
                <value>
                    <fullName>ADMIN3</fullName>
                </value>
                <value>
                    <fullName>ADMIN4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Korting1__c</fullName>
        <label>Korting1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>availability__c</fullName>
        <formula>PricebookEntry.Product2.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>availability</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eindprijs__c</fullName>
        <formula>TEXT(PricebookEntry.UnitPrice *  Korting1__c)</formula>
        <label>eindprijs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>yp__Quote_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Item</label>
        <referenceTo>yp__Quote_Line_Item__c</referenceTo>
        <relationshipLabel>Opportunity Product</relationshipLabel>
        <relationshipName>Opportunity_Line</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>